Added processed dataset

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-API/data/raw/Train_data.csv
-API/data/raw/Test_data.csv
-API/data/processed/train_data.csv
-API/data/processed/test_data.csv
 API/scripts/__pycache__/
+API/model/__pycache__/
