--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ API/data/raw/Train_data.csv
 API/data/raw/Test_data.csv
 API/data/processed/train_data.csv
 API/data/processed/test_data.csv
+API/app/__pycache__
