--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ API/data/raw/Test_data.csv
 API/data/processed/train_data.csv
 API/data/processed/test_data.csv
 API/app/__pycache__
+frontend2/Network_intrusion/node_modules
